crates/alien-terraform/tests/generator/snapshots/generator__generator__helpers__gcp_remote_sandbox.snap
---
source: crates/alien-terraform/tests/generator/helpers.rs
expression: buf
---
=== versions.tf ===
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    google = {
      source  = "hashicorp/google"
      version = ">= 5.0"
    }
    google-beta = {
      source  = "hashicorp/google-beta"
      version = ">= 6.0"
    }
    time = {
      source  = "hashicorp/time"
      version = ">= 0.9"
    }
    random = {
      source  = "hashicorp/random"
      version = ">= 3.6"
    }
  }
}

=== variables.tf ===
variable "resource_prefix" {
  type        = string
  description = "Optional stable physical resource prefix. Leave empty to generate one."
  default     = ""

  validation {
    condition     = var.resource_prefix == "" || (can(regex("^[a-z][a-z0-9-]{1,38}[a-z0-9]$", var.resource_prefix)) && length(regexall("--", var.resource_prefix)) == 0)
    error_message = "resource_prefix must be 3-40 characters: lowercase letters, numbers, and hyphens; start with a letter; end with a letter or number; and not contain consecutive hyphens."
  }
}

variable "name" {
  type        = string
  description = "Human-readable application name shown in setup and cloud IAM review metadata."
}

variable "token" {
  type        = string
  description = "Install token from the application setup page. This is the same token used by the deploy CLI --token flag."
  sensitive   = true
}

variable "management_url" {
  type        = string
  description = "Management endpoint used to register this deployment."
  default     = ""
}

variable "gcp_project" {
  type        = string
  description = "GCP project ID."
}

variable "gcp_region" {
  type        = string
  description = "GCP region."
  default     = "us-central1"
}

variable "managing_service_account_email" {
  type        = string
  description = "Email of the management service account allowed to impersonate setup-created identities."
}

variable "gcp_manage_custom_roles" {
  type        = bool
  description = "Whether this module creates the GCP project custom roles it binds. Set to false when those roles are managed outside this stack."
  default     = true
}

variable "gcp_custom_role_prefix" {
  type        = string
  description = "Prefix used for GCP project custom role IDs when gcp_manage_custom_roles is false. Empty uses resource_prefix."
  default     = ""
}

=== providers.tf ===
provider "google" {
  project = var.gcp_project
  region  = var.gcp_region
}

provider "google-beta" {
  project = var.gcp_project
  region  = var.gcp_region
}

=== resource_prefix.tf ===
resource "random_id" "resource_prefix" {
  byte_length = 4
}

=== locals.tf ===
locals {
  resource_prefix              = var.resource_prefix == "" ? format("a%s", random_id.resource_prefix.hex) : var.resource_prefix
  deployment_name              = var.name
  gcp_custom_role_prefix       = var.gcp_custom_role_prefix != "" ? substr(replace(lower(var.gcp_custom_role_prefix), "-", "_"), 0, 18) : length(replace(lower(local.resource_prefix), "-", "_")) <= 18 ? replace(lower(local.resource_prefix), "-", "_") : format("%s_%s", substr(replace(lower(local.resource_prefix), "-", "_"), 0, 9), substr(sha256(local.resource_prefix), 0, 8))
  deployment_platform          = "gcp"
  deployment_target            = "gcp"
  deployment_region            = var.gcp_region
  deployment_management_config = null
  deployment_settings = {
    deploymentModel = "push"
    updates         = "approval-required"
    telemetry       = "off"
    heartbeats      = "on"
  }
  deployment_resources = [
    {
      id   = "agents-engine"
      type = "gcp_agent_platform_engine"
      importData = {
        engineId = google_vertex_ai_reasoning_engine.agents_engine.name
      }
    },
    {
      id   = "access"
      type = "resource-access"
      importData = {
        projectId              = var.gcp_project
        serviceAccountEmail    = google_service_account.access.email
        serviceAccountUniqueId = google_service_account.access.unique_id
      }
    },
    {
      id   = "agents"
      type = "sandbox"
      importData = {
        region = var.gcp_region
      }
    }
  ]
}

=== agents_engine.tf ===
resource "google_vertex_ai_reasoning_engine" "agents_engine" {
  provider     = google-beta
  region       = var.gcp_region
  display_name = "${local.resource_prefix}-agents-engine"
  labels = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "agents-engine"
    "resource-type" = "sandbox-engine"
  }
}

=== access.tf ===
resource "google_service_account" "access" {
  project      = var.gcp_project
  account_id   = format("%s-%s", trim(substr(replace(lower(format("a-%s-access", local.resource_prefix)), "_", "-"), 0, 21), "-"), substr(sha1(replace(lower(format("%s-access", local.resource_prefix)), "_", "-")), 0, 8))
  display_name = "${local.deployment_name}: application access"
  description  = "Data-plane identity for explicitly published resources in ${local.deployment_name}."
}

resource "google_service_account_iam_member" "access_manager_token_creator" {
  for_each           = toset(compact([var.managing_service_account_email]))
  service_account_id = google_service_account.access.id
  role               = "roles/iam.serviceAccountTokenCreator"
  member             = "serviceAccount:${each.value}"
}

resource "google_service_account_iam_member" "access_manager_user" {
  for_each           = toset(compact([var.managing_service_account_email]))
  service_account_id = google_service_account.access.id
  role               = "roles/iam.serviceAccountUser"
  member             = "serviceAccount:${each.value}"
}

=== agents.tf ===
resource "google_project_iam_custom_role" "gcp_role_sandbox_lifecycle_and_exec" {
  count       = var.gcp_manage_custom_roles ? 1 : 0
  project     = var.gcp_project
  role_id     = format("role_%s_sandbox_lifecycle_and_exec", local.gcp_custom_role_prefix)
  title       = "${local.deployment_name}: Sandbox Lifecycle And Exec"
  description = "Used by ${local.deployment_name}. Create, drive and tear down sandboxes under the selected reasoning engine. Resource prefix: ${local.resource_prefix}."
  stage       = "GA"
  permissions = [
    "aiplatform.sandboxEnvironments.create",
    "aiplatform.sandboxEnvironments.delete",
    "aiplatform.sandboxEnvironments.execute",
    "aiplatform.sandboxEnvironments.get",
    "aiplatform.sandboxEnvironments.list",
    "aiplatform.sandboxEnvironments.pause",
    "aiplatform.sandboxEnvironments.resume"
  ]
}

resource "google_vertex_ai_reasoning_engine_iam_member" "gcp_role_sandbox_lifecycle_and_exec_agents_engine_access_0" {
  provider         = google-beta
  reasoning_engine = google_vertex_ai_reasoning_engine.agents_engine.name
  role             = var.gcp_manage_custom_roles ? google_project_iam_custom_role.gcp_role_sandbox_lifecycle_and_exec[0].name : format("projects/%s/roles/role_%s_sandbox_lifecycle_and_exec", var.gcp_project, local.gcp_custom_role_prefix)
  member           = "serviceAccount:${google_service_account.access.email}"
}

=== iam_propagation.tf ===
resource "time_sleep" "gcp_iam_propagation" {
  create_duration = "120s"
  depends_on = [
    google_service_account_iam_member.access_manager_token_creator,
    google_service_account_iam_member.access_manager_user,
    google_vertex_ai_reasoning_engine_iam_member.gcp_role_sandbox_lifecycle_and_exec_agents_engine_access_0
  ]
}

=== registration.tf ===
resource "terraform_data" "deployment_registration" {
  input = {
    platform                    = local.deployment_platform
    token                       = var.token
    name                        = var.name
    resource_prefix             = local.resource_prefix
    setup_target                = ""
    setup_import_format_version = 1
    setup_fingerprint           = ""
    setup_fingerprint_version   = 0
    management_url              = var.management_url
    management_config           = local.deployment_management_config
    stack_settings              = local.deployment_settings
    resources                   = local.deployment_resources
    inputValues                 = {}
  }
  depends_on = [
    google_vertex_ai_reasoning_engine.agents_engine,
    google_service_account.access,
    google_service_account_iam_member.access_manager_token_creator,
    google_service_account_iam_member.access_manager_user,
    google_project_iam_custom_role.gcp_role_sandbox_lifecycle_and_exec,
    google_vertex_ai_reasoning_engine_iam_member.gcp_role_sandbox_lifecycle_and_exec_agents_engine_access_0,
    time_sleep.gcp_iam_propagation
  ]
}

=== outputs.tf ===
output "deployment_target" {
  value       = "gcp"
  description = "Terraform module target."
}

output "deployment_resource_prefix" {
  value       = local.resource_prefix
  description = "Physical resource prefix."
}

output "deployment_platform" {
  value       = local.deployment_platform
  description = "Target platform."
}

output "deployment_region" {
  value       = local.deployment_region
  description = "Target cloud region or location."
}

output "deployment_setup_target" {
  value       = ""
  description = "Setup target."
}

output "deployment_setup_import_format_version" {
  value       = 1
  description = "Setup registration payload format version."
}

output "deployment_setup_fingerprint" {
  value       = ""
  description = "Setup compatibility fingerprint."
}

output "deployment_setup_fingerprint_version" {
  value       = 0
  description = "Setup fingerprint algorithm version."
}

output "deployment_management_config" {
  value       = jsonencode(local.deployment_management_config)
  description = "Deployment registration management configuration JSON."
}

output "deployment_stack_settings" {
  value       = jsonencode(local.deployment_settings)
  description = "Deployment registration settings JSON."
  sensitive   = true
}

output "deployment_resources" {
  value       = jsonencode(local.deployment_resources)
  description = "Deployment registration resource metadata JSON."
}

=== PERMISSIONS.md ===
# Application access permissions

The setup creates one narrow application access identity. It can access only the resources listed below; it does not receive the setup's management permissions.

## `agents` (sandbox)

Create and terminate sandboxes in this sandbox resource, and run arbitrary code inside them.

Permission set: `sandbox/remote-execute` (revision 1).

- Create, drive and tear down sandboxes under the selected reasoning engine.
  Scope: `projects/${var.gcp_project}/locations/${var.gcp_region}/reasoningEngines/(the id assigned at apply to ${local.resource_prefix}-agents-engine)`
  - `aiplatform.sandboxEnvironments.create`
  - `aiplatform.sandboxEnvironments.get`
  - `aiplatform.sandboxEnvironments.list`
  - `aiplatform.sandboxEnvironments.delete`
  - `aiplatform.sandboxEnvironments.execute`
  - `aiplatform.sandboxEnvironments.pause`
  - `aiplatform.sandboxEnvironments.resume`

=== README.md ===
# Deployment setup - byo-sandbox

Target: `gcp`.

This module creates setup-owned infrastructure, grants the management access needed after setup, and prepares deployment registration metadata. Review the generated `.tf` files before applying; each resource file maps to one setup resource.

## Inputs

Required:

- `token`: install token from the setup page.
- `name`: deployment name to include in the registration metadata.

Common optional settings:

- `resource_prefix`: stable physical-name prefix. Leave empty to generate one.
- `management_url`: management endpoint used to register this deployment. The generated installation snippet supplies the endpoint selected for the deployment target.

GCP settings:

- `gcp_project`: target GCP project ID.
- `gcp_region`: target GCP region.
- `managing_service_account_email`: management service account allowed to impersonate setup-created identities.
- `gcp_manage_custom_roles`: whether this module creates project custom roles.
- `gcp_custom_role_prefix`: custom role ID prefix when roles are managed outside this module.

## Run

Use your organization's normal backend and approval workflow. A typical local review looks like:

```bash
export TF_VAR_name="byo-sandbox"
export TF_VAR_token="..."
terraform init
terraform validate
terraform plan -out=tfplan
terraform apply tfplan
```

## Registration

This module exposes `deployment_management_config`, `deployment_stack_settings`, `deployment_resources`, and (when the stack declares deployer inputs) `deployment_input_values` outputs for registration flows managed outside Terraform.

## Outputs

- `deployment_management_config`: management endpoint and credential-boundary metadata.
- `deployment_stack_settings`: deployment settings JSON assembled from typed variables, package defaults, and advanced-setting overlays.
- `deployment_resources`: setup-owned resource metadata handed to the deployment runtime.
- `deployment_input_values`: deployer input values JSON, emitted only when the stack declares deployer inputs.
- `deployment_id` and `deployment_token`: emitted only when Terraform performs registration.
